--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,13 @@
-title: 2020 in Buffalo News Front Pages # your name (or website title) here
-logo: "/images/logo.png?raw=true" # your photo (or logo) here
+title: 2020 in Buffalo News Front Pages # 
+logo: 
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  vicky johnson-dahl
-  <br>
+  vicky johnson-dahl<br>
   cartographer, dc
-  <br><br>
+  <br>  
+  <br>
+  <a href="https://www.twitter.com/hurricanevicky/">twitter</a> // <a href="mailto:victoria.johnson@gmail.com?subject=maps!!!">email</a> 
+  <br>
+  <br>>
  
   
 theme: jekyll-theme-dinky
