--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: 2020 in Buffalo News Front Pages # 
+title:  # 
 logo:
 description: > # your text below (remove <br> elements if you don't need line breaks)
   vicky johnson-dahl<br>
