--- a/_config.yml
+++ b/_config.yml
@@ -10,5 +10,5 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br>
  
   
-theme: jekyll-theme-dinky
+theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
