--- a/_config.yml
+++ b/_config.yml
@@ -11,4 +11,4 @@ description: > # your text below (remove <br> elements if you don't need line br
  
   
 theme: jekyll-theme-minimal
-google_analytics: UA-000000-0 # your Google Analytics tracking ID here
+google_analytics: G-LRMZJ6X72H # your Google Analytics tracking ID here
