--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   cartographer, dc
   <br>  
   <br>
-  <a href="https://www.twitter.com/hurricanevicky/">twitter</a> // <a href="mailto:victoria.johnson@gmail.com?subject=go bills">email</a> 
+  <a href="https://bsky.app/profile/vickyjohnsondahl.bsky.social">bsky</a> // <a href="mailto:victoria.johnson@gmail.com?subject=go bills">email</a> 
   <br>
   <br>
  
